--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "redis-self-hosted",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "subj",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "redis-self-hosted": "./index.js"
+  },
   "scripts": {
+    "push": "git add . && git commit -am auto && git push otigin main && npm publish --access=public",
     "backend": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +20,7 @@
   ],
   "author": "Michael Belyakov",
   "license": "ISC",
+  "repository": "https://github.com/yababay/redis-self-hosted.git",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
